--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -995,7 +995,7 @@
                             <!-- Single Blog Start -->
                             <div class="single-blog">
                                 <div class="blog-image">
-                                    <a target="_blank" href="https://kriptokoin.com/blockchain-futurezone-5-kasimda-yapilacak/"><img src="assets/images/blog/blog-1.jpg" alt=""></a>
+                                    <a target="_blank" href="https://kriptokoin.com/blockchain-futurezone-5-kasimda-yapilacak/"><img src="assets/images/blog/anatolianMeetupPhoto.png" alt=""></a>
                                 </div>
                                 <div class="blog-content">
                                     <div class="blog-meta">
