speaker social media link added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -441,7 +441,7 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="speaker-single.html"><img src="assets/images/speaker/anil.png" alt="Speaker"></a>
+                                            <a href="https://twitter.com/anilchain"><img src="assets/images/speaker/anil.png" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
@@ -462,7 +462,7 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="speaker-single.html"><img src="assets/images/speaker/ekrem.png" alt="Speaker"></a>
+                                            <a href="https://twitter.com/mehmet_ekrem_"><img src="assets/images/speaker/ekrem.png" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
