--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -448,7 +448,7 @@
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="speaker-single.html">Anıl Karaçay</a></h4>
+                                        <h4 class="speaker-name"><a href="https://www.linkedin.com/in/anilkaracay/">Anıl Karaçay</a></h4>
                                         <p class="speaker-designation">Founder of Adchain</p>
                                     </div>
                                 </div>
@@ -469,7 +469,7 @@
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="speaker-single.html">Ekrem Örünğ</a></h4>
+                                        <h4 class="speaker-name"><a href="https://twitter.com/mehmet_ekrem_">Ekrem Örünğ</a></h4>
                                         <p class="speaker-designation">Lbank Turkey</p>
                                     </div>
                                 </div>
