bg added and some desc updated

--- a/ABSummit/contact.html
+++ b/ABSummit/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/adc.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -96,7 +96,7 @@
                                             <li><a href="login-register.html">Login Register</a></li>
                                         </ul> -->
                                     </li>
-                                    <li class="active-menu"><a href="index.html">Sponsors</a></li>
+                                    <li ><a href="index.html">Sponsors</a></li>
                                     <li><a href="index.html">News</a>
                                         <!-- <ul class="sub-menu">
                                             <li><a href="blog.html">Blog Grid</a></li>
@@ -388,7 +388,7 @@
                                 </div>
                                 <div class="info-content">
                                     <h5 class="title">Telephone</h5>
-                                    <p>+458 123 657 2324</p>
+                                    <p>+90</p>
                                 </div>
                             </div>
                             <!--Single Contact Info End -->
@@ -427,17 +427,17 @@
         <!-- Contact Info End -->
 
         <!-- Contact Map Start -->
-        <div class="section contact-map-section">
+        <!-- <div class="section contact-map-section">
             <div class="contact-map-wrap">
                 <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Mission%20District%2C%20San%20Francisco%2C%20CA%2C%20USA&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
             </div>
-        </div>
+        </div> -->
         <!-- Contact Map End -->
 
     </div>
 
     <!-- Footer Start -->
-    <div class="meeta-footer-section" style="background-image: url(assets/images/bg/footer-bg.jpg);">
+    <div class="meeta-footer-section" style="background-image: url(assets/images/bg/contact-footer.png);">
 
         <!-- Footer Widget Start -->
         <div class="footer-widget text-center">
@@ -445,13 +445,13 @@
 
                 <!-- Footer Logo Start -->
                 <div class="footer-logo">
-                    <a href="index.html"><img src="assets/images/footer-logo-1.png" alt="Logo"></a>
+                    <a href="https://twitter.com/adchainapp"><img style="width: 150px;" src="./assets/images/adc.png" alt="Logo"></a>
                 </div>
                 <!-- Footer Logo End -->
 
                 <!-- Footer Newsletter Start -->
                 <div class="footer-newsletter">
-                    <p>Join our mailing list to stay up to date on all things Expotin</p>
+                    <p>Join our mailing list to stay up to date on all things</p>
 
                     <div class="footer-newsletter-form">
                         <form action="#">
@@ -472,7 +472,7 @@
 
                 <!-- Footer Copyright Start -->
                 <div class="footer-copyright">
-                    <p>2022 Copyright Meeta Designed by Pixelcurve. All Rights Reserved</p>
+                    <p style="color: #fc097c;">Powered by <a href="https://twitter.com/adchainapp">Adchain</a> </p>
                 </div>
                 <!-- Footer Copyright End -->
 
