--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/adc.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -249,13 +249,13 @@
         <!-- Offcanvas End -->
 
         <!-- Slider Section Start  -->
-        <div class="meeta-hero-section-6" style="background-image: url(assets/images/hero-6.jpg);">
+        <div class="meeta-hero-section-6" style="background-image: url(assets/images/mainSection.png);">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="meeta-hero-content text-center">
                             <p class="text" data-aos-delay="700" data-aos="fade-up">December 17, Eskişehir, Türkiye</p>
-                            <h2 class="title" data-aos-delay="800" data-aos="fade-up">Anatolian Blockchain  <br> <span>Meetup 2.0</span></h2>
+                            <h2 class="title" data-aos-delay="800" data-aos="fade-up">  <span>Meetup 2.0</span></h2>
                             <div class="header-btn" data-aos-delay="900" data-aos="fade-up">
                                 <a class="btn-2" href="#">Register Now</a>
                             </div>
@@ -358,7 +358,7 @@
         <!-- About Section End -->
 
         <!-- Counter Start -->
-        <div class="meeta-counter-section section-padding" style="background-image: url(assets/images/bg/counter-bg.jpg);">
+        <div class="meeta-counter-section section-padding" style="background-image: url(assets/images/bg/counter-bg.png);">
             <div class="shape-1">
                 <img src="assets/images/shape/counter-shape-1.png" alt="">
             </div>
@@ -378,7 +378,7 @@
                             <!-- Single Counter Start -->
                             <div class="single-counter counter-item-1 text-center">
                                 <div class="counter-text">
-                                    <span class="counter">24</span>
+                                    <span class="counter">15</span>
                                     <p>Speakers</p>
                                 </div>
                             </div>
@@ -388,7 +388,7 @@
                             <!-- Single Counter Start -->
                             <div class="single-counter counter-item-2 text-center">
                                 <div class="counter-text">
-                                    <span class="counter">1140</span>
+                                    <span class="counter">600</span>
                                     <p>Attendence</p>
                                 </div>
                             </div>
@@ -398,8 +398,8 @@
                             <!-- Single Counter Start -->
                             <div class="single-counter counter-item-3 text-center">
                                 <div class="counter-text">
-                                    <span class="counter">05</span>
-                                    <p>Workshops</p>
+                                    <span class="counter">1</span>
+                                    <p>Workshop</p>
                                 </div>
                             </div>
                             <!-- Single Counter End -->
@@ -408,8 +408,8 @@
                             <!-- Single Counter Start -->
                             <div class="single-counter text-center">
                                 <div class="counter-text">
-                                    <span class="counter">205</span>
-                                    <p>Guests</p>
+                                    <span class="counter">5</span>
+                                    <p>Community</p>
                                 </div>
                             </div>
                             <!-- Single Counter End -->
@@ -441,14 +441,14 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="https://twitter.com/anilchain"><img src="assets/images/speaker/anil.png" alt="Speaker"></a>
+                                            <a href="#"><img src="assets/images/speaker/speaker-6.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="https://www.linkedin.com/in/anilkaracay/">Anıl Karaçay</a></h4>
+                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                         <p class="speaker-designation">Founder of Adchain</p>
                                     </div>
                                 </div>
@@ -462,15 +462,15 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="https://twitter.com/mehmet_ekrem_"><img src="assets/images/speaker/ekrem.png" alt="Speaker"></a>
+                                            <a href="#"><img src="assets/images/speaker/speaker-6.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="https://twitter.com/mehmet_ekrem_">Ekrem Örünğ</a></h4>
-                                        <p class="speaker-designation">Lbank Turkey</p>
+                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
+                                        <p class="speaker-designation">Speaker</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
@@ -483,14 +483,14 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="speaker-single.html"><img src="assets/images/speaker/speaker-3.jpg" alt="Speaker"></a>
+                                            <a href="#"><img src="assets/images/speaker/speaker-6.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="speaker-single.html">Doruk Çakmak</a></h4>
+                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                         <p class="speaker-designation">Lead Speaker</p>
                                     </div>
                                 </div>
@@ -511,7 +511,7 @@
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="speaker-single.html">Andrew Inon</a></h4>
+                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                         <p class="speaker-designation">Lead Speaker</p>
                                     </div>
                                 </div>
@@ -525,14 +525,14 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="speaker-single.html"><img src="assets/images/speaker/speaker-5.jpg" alt="Speaker"></a>
+                                            <a href="#"><img src="assets/images/speaker/speaker-5.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="speaker-single.html">kin Joan</a></h4>
+                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                         <p class="speaker-designation">Developer</p>
                                     </div>
                                 </div>
@@ -553,7 +553,7 @@
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="speaker-single.html">Aronic Kenan</a></h4>
+                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                         <p class="speaker-designation">Graphic Designer</p>
                                     </div>
                                 </div>
@@ -627,11 +627,11 @@
                                                 </div>
                                                 <div class="event-title">
                                                     <span class="time">09 AM - 11 AM</span>
-                                                    <span class="title">Registration for opening workshop </span>
+                                                    <span class="title">Coming Soon... </span>
                                                 </div>
                                             </h3>
                                             <div class="meeta-event-accordion-body open">
-                                                <p>We’re inviting the top creatives in the tech industry from all over the world to come learn, grow, scrape their knees, try new things, to be vulnerable, and to have epic adventures</p>
+                                                <p></p>
                                             </div>
                                         </li>
 
@@ -642,11 +642,11 @@
                                                 </div>
                                                 <div class="event-title">
                                                     <span class="time">11 AM - 01 AM</span>
-                                                    <span class="title">Introduction about speakers </span>
+                                                    <span class="title">Coming Soon...</span>
                                                 </div>
                                             </h3>
                                             <div class="meeta-event-accordion-body">
-                                                <p>We’re inviting the top creatives in the tech industry from all over the world to come learn, grow, scrape their knees, try new things, to be vulnerable, and to have epic adventures</p>
+                                                <p></p>
                                             </div>
                                         </li>
 
@@ -657,11 +657,25 @@
                                                 </div>
                                                 <div class="event-title">
                                                     <span class="time">01 AM - 02 AM</span>
-                                                    <span class="title">Lunch Break </span>
+                                                    <span class="title">Coming Soon... </span>
                                                 </div>
                                             </h3>
                                             <div class="meeta-event-accordion-body">
-                                                <p>We’re inviting the top creatives in the tech industry from all over the world to come learn, grow, scrape their knees, try new things, to be vulnerable, and to have epic adventures</p>
+                                                <p>Coming Soon...</p>
+                                            </div>
+                                        </li>
+                                        <li class="meeta-event-accordion-item">
+                                            <h3 class="meeta-event-accordion-toggle">
+                                                <div class="image">
+                                                    <img src="assets/images/schedule-3.jpg" alt="">
+                                                </div>
+                                                <div class="event-title">
+                                                    <span class="time">02 AM - 04 AM</span>
+                                                    <span class="title">Coming Soon... </span>
+                                                </div>
+                                            </h3>
+                                            <div class="meeta-event-accordion-body">
+                                                <!-- <p>Coming Soon...</p> -->
                                             </div>
                                         </li>
 
@@ -936,7 +950,7 @@
         <!-- Pricing End -->
 
         <!-- Event Sponsors Start -->
-        <div id="Sponsors" class="meeta-event-sponsors-2 section-padding" style="background-image: url(assets/images/bg/sponsor-bg-2.jpg);">
+        <div id="Sponsors" class="meeta-event-sponsors-2 section-padding" style="background-image: url(assets/images/bg/sponsor-bg-2.png);">
             <div class="container">
 
                 <!-- Section Title Start -->
@@ -1208,7 +1222,7 @@
     </div>
 
     <!-- Footer Start -->
-    <div class="meeta-footer-section meeta-footer-2" style="background-image: url(assets/images/bg/footer-bg-2.jpg);">
+    <div class="meeta-footer-section meeta-footer-2" style="background-image: url(assets/images/bg/footer-bg-2.png);">
 
         <!-- Footer Widget Start -->
         <div class="footer-widget">
@@ -1244,7 +1258,7 @@
                                         <!-- Footer Info Start -->
                                         <div class="footer-info">
                                             <h3 class="title">Event Details</h3>
-                                            <span class="date">27 December 2022 </span>
+                                            <span class="date">17 December 2022 </span>
                                             <p>Eskişehir</p>
                                             <div class="footer-widget-social">
                                                 <a href="https://www.instagram.com/cankayablockchain/"><i class="fab fa-instagram"></i></a>
@@ -1270,7 +1284,7 @@
                 </div>
 
                 <div class="footer-copyright text-center">
-                    <p>Powered by <a href="https://twitter.com/adchainapp">Adchain</a> . All Rights Reserved</p>
+                    <p style="color:#fc097c ;">Powered by <a href="https://twitter.com/adchainapp">Adchain</a> . All Rights Reserved</p>
                     <a href="https://twitter.com/adchainapp">
                         <img width="200px" height="150" src="./assets/images/adc.png" alt="adchain logo">
                     </a>
