--- a/ABSummit/about.html
+++ b/ABSummit/about.html
@@ -61,7 +61,7 @@
 
                             <!-- Header Logo Start -->
                             <div class="header-logo">
-                                <a  href="index.html"><img src="assets/images/logo-deneme.png" alt="Logo"></a>
+                                <a href="index.html"><img src="assets/images/cankaya-logo/logo.png" alt="Logo"></a>
                             </div>
                             <!-- Header Logo End -->
 
@@ -82,7 +82,9 @@
                                         </ul> -->
                                     </li>
                                     <li class="active-menu"><a href="about.html">About</a></li>
-                                    <li><a href="#">Pages</a>
+                                    <li><a href="index.html">Speakers</a>
+                                    <li ><a href="index.html">Sponsors</a></li>
+                                    <li><a href="index.html">News</a>
                                         <!-- <ul class="sub-menu">
                                             <li><a href="event-list.html">Event List</a></li>
                                             <li><a href="event-single.html">Event Single</a></li>
@@ -96,7 +98,7 @@
                                             <li><a href="login-register.html">Login Register</a></li>
                                         </ul> -->
                                     </li>
-                                    <li><a href="#">Blog</a>
+                
                                         <!-- <ul class="sub-menu">
                                             <li><a href="blog.html">Blog Grid</a></li>
                                             <li><a href="blog-standard.html">Latest News</a></li>
@@ -173,7 +175,7 @@
             <div class="icon-close"></div>
 
             <!-- Mini Cart Box Start -->
-            <div class="meeta-mini-cart-box">
+            <!-- <div class="meeta-mini-cart-box">
 
                 <div class="mini-cart-items">
 
@@ -219,7 +221,7 @@
                     <a class="btn btn-primary" href="#">View cart</a>
                     <a class="btn btn-white" href="#">Checkout</a>
                 </div>
-            </div>
+            </div> -->
             <!-- Mini Cart Box End -->
 
         </div>
@@ -432,7 +434,7 @@
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="speaker-single.html">Mike Fermalin</a></h4>
+                                    <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                     <p class="speaker-designation">Lead Speaker</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
@@ -449,7 +451,7 @@
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="speaker-single.html">Harnold Min</a></h4>
+                                    <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                     <p class="speaker-designation">Lead Speaker</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
@@ -466,7 +468,7 @@
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="speaker-single.html">Joakim Ken</a></h4>
+                                    <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                     <p class="speaker-designation">Developer</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
@@ -483,7 +485,7 @@
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="speaker-single.html">Andrew Inon</a></h4>
+                                    <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                     <p class="speaker-designation">Developer</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
@@ -500,7 +502,7 @@
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="speaker-single.html">kin Joan</a></h4>
+                                    <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                     <p class="speaker-designation">Developer</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
@@ -517,7 +519,7 @@
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="speaker-single.html">Aronic Kenan</a></h4>
+                                    <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                     <p class="speaker-designation">Developer</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
@@ -534,7 +536,7 @@
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="speaker-single.html">Kinda Mona</a></h4>
+                                    <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                     <p class="speaker-designation">Developer</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
@@ -551,7 +553,7 @@
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
-                                    <h4 class="speaker-name"><a href="speaker-single.html">Mike Fermalin</a></h4>
+                                    <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
                                     <p class="speaker-designation">Developer</p>
                                 </div>
                                 <img class="speaker-shape-1" src="assets/images/shape/shape-8.png" alt="">
@@ -699,7 +701,7 @@
         <!-- Gallery End -->
 
         <!-- Event Sponsors Start -->
-        <div class="meeta-event-sponsors-2 section-padding" style="background-image: url(assets/images/bg/sponsor-bg-2.jpg);">
+        <div class="meeta-event-sponsors-2 section-padding" style="background-image: url(assets/images/bg/sponsor-bg-2.png);">
             <div class="container">
 
                 <!-- Section Title Start -->
@@ -745,7 +747,7 @@
     </div>
 
     <!-- Footer Start -->
-    <div class="meeta-footer-section" style="background-image: url(assets/images/bg/footer-bg.jpg);">
+    <div class="meeta-footer-section" style="background-image: url(assets/images/bg/footer-bg.png);">
 
         <!-- Footer Widget Start -->
         <div class="footer-widget text-center">
@@ -753,13 +755,13 @@
 
                 <!-- Footer Logo Start -->
                 <div class="footer-logo">
-                    <a href="index.html"><img src="assets/images/footer-logo-1.png" alt="Logo"></a>
+                    <a href="https://twitter.com/adchainapp"><img style="width: 150px;" src="./assets/images/adc.png" alt="Logo"></a>
                 </div>
                 <!-- Footer Logo End -->
 
                 <!-- Footer Newsletter Start -->
                 <div class="footer-newsletter">
-                    <p>Join our mailing list to stay up to date on all things Expotin</p>
+                    <p>Join our mailing list to stay up to date on all things</p>
 
                     <div class="footer-newsletter-form">
                         <form action="#">
@@ -771,16 +773,16 @@
                 <!-- Footer Newsletter End -->
 
                 <!-- Footer widget Social Start -->
-                <div class="footer-widget-social">
-                    <a href="https://www.instagram.com/cankayablockchain/"><i class="fab fa-instagram"></i></a>
-                    <a href="https://twitter.com/cankayachain"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.linkedin.com/company/cankayablockchain"><i class="fab fa-linkedin"></i></a>
+                <div  class="footer-widget-social">
+                    <a style="color: #fc097c; href="https://www.instagram.com/cankayablockchain/"><i class="fab fa-instagram"></i></a>
+                    <a style="color: #fc097c; href="https://twitter.com/cankayachain"><i class="fab fa-twitter"></i></a>
+                    <a style="color: #fc097c; href="https://www.linkedin.com/company/cankayablockchain"><i class="fab fa-linkedin"></i></a>
                 </div>
                 <!-- Footer widget Social End -->
 
                 <!-- Footer Copyright Start -->
                 <div class="footer-copyright">
-                    <p>2022 Copyright Meeta Designed by Pixelcurve . All Rights Reserved</p>
+                    <p style="color: #fc097c;">Powered by <a href="https://twitter.com/adchainapp">Adchain</a> </p>
                 </div>
                 <!-- Footer Copyright End -->
 
