--- a/ABSummit/contact.html
+++ b/ABSummit/contact.html
@@ -401,7 +401,7 @@
                                 </div>
                                 <div class="info-content">
                                     <h5 class="title">Drop Your Mail</h5>
-                                    <p>info@techmax.nl</p>
+                                    <p>adchainapp@gmail.com</p>
                                 </div>
                             </div>
                             <!--Single Contact Info End -->
