--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -289,7 +289,7 @@
                                 <img src="assets/images/about-2.jpg" alt="About">
                             </div>
                             <div class="play-btn">
-                                <a class="popup-video" href="https://www.youtube.com/watch?time_continue=3&v=_X0eYtY8T_U"><i class="fas fa-play"></i></a>
+                                <!-- <a class="popup-video" href=""><i class="fas fa-play"></i></a> -->
                             </div>
                         </div>
                         <!-- About Images End -->
