--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -286,7 +286,7 @@
                                 <img src="assets/images/shape/about-2-shape.png" alt="">
                             </div>
                             <div class="image">
-                                <img src="assets/images/about-2.jpg" alt="About">
+                                <!-- <img src="assets/images/about-2.jpg" alt="About"> -->
                             </div>
                             <div class="play-btn">
                                 <!-- <a class="popup-video" href=""><i class="fas fa-play"></i></a> -->
