--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -255,7 +255,7 @@
                     <div class="col-lg-12">
                         <div class="meeta-hero-content text-center">
                             <p class="text" data-aos-delay="700" data-aos="fade-up">December 17, Eskişehir, Türkiye</p>
-                            <h2 class="title" data-aos-delay="800" data-aos="fade-up">  <span>Meetup 2.0</span></h2>
+                            <h2 class="title" data-aos-delay="800" data-aos="fade-up">Anatolian Blockchain <br>  <span>Meetup 2.0</span></h2>
                             <div class="header-btn" data-aos-delay="900" data-aos="fade-up">
                                 <a class="btn-2" href="#">Register Now</a>
                             </div>
