--- a/ABSummit/about.html
+++ b/ABSummit/about.html
@@ -430,7 +430,7 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-1.jpg" alt="Speaker"></a>
+                                <a href="#"><img src="assets/images/speaker-1.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
@@ -447,7 +447,7 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-2.jpg" alt="Speaker"></a>
+                                <a href="#"><img src="assets/images/speaker-1.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
@@ -464,7 +464,7 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-3.jpg" alt="Speaker"></a>
+                                <a href="#"><img src="assets/images/speaker-1.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
@@ -481,7 +481,7 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-4.jpg" alt="Speaker"></a>
+                                <a href="#"><img src="assets/images/speaker-1.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
@@ -498,7 +498,7 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-5.jpg" alt="Speaker"></a>
+                                <a href="#"><img src="assets/images/speaker-1.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
@@ -515,7 +515,7 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-6.jpg" alt="Speaker"></a>
+                                <a href="#"><img src="assets/images/speaker-1.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
@@ -532,7 +532,7 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-7.jpg" alt="Speaker"></a>
+                                <a href="#"><img src="assets/images/speaker-1.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
@@ -549,7 +549,7 @@
                         <!-- Single Speakers Start -->
                         <div class="single-speaker">
                             <div class="speaker-image">
-                                <a href="speaker-single.html"><img src="assets/images/speaker-8.jpg" alt="Speaker"></a>
+                                <a href="#"><img src="assets/images/speaker-1.jpg" alt="Speaker"></a>
                             </div>
                             <div class="speaker-content">
                                 <div class="speaker-content-box">
