--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -249,7 +249,7 @@
         <!-- Offcanvas End -->
 
         <!-- Slider Section Start  -->
-        <div class="meeta-hero-section-6" style="background-image: url(assets/images/mainSection.png);">
+        <div class="meeta-hero-section-6" style="background-image: url(assets/images/mainSection.jpeg);">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
