--- a/ABSummit/about.html
+++ b/ABSummit/about.html
@@ -233,7 +233,7 @@
             <div class="offcanvas-header">
                 <!-- Offcanvas Logo Start -->
                 <div class="offcanvas-logo">
-                    <a href="index.html"><img src="assets/images/logo-4.png" alt=""></a>
+                    <a href="index.html"><img src="assets/images/cankaya-logo/logo.png" alt=""></a>
                 </div>
                 <!-- Offcanvas Logo End -->
                 <button type="button" class="close-btn" data-bs-dismiss="offcanvas"><i class="flaticon-close"></i></button>
