--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1048,6 +1048,7 @@
             </div>
             <ul>
                 <a href="https://www.twitter.com/ankarachain/"> <li>  <img src="assets/images/ankarablockchain.png" alt=""> <img src="assets/images/ankarablockchain.png" alt=""> </li></a>
+                <a href="https://m1nxnightclub.com/"> <li>  <img src="assets/images/m1nx.jpeg" alt=""> <img src="assets/images/m1nx.jpeg" alt=""> </li></a>
              
               
             </ul>
