--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1049,6 +1049,7 @@
             <ul>
                 <a href="https://www.twitter.com/ankarachain/"> <li>  <img src="assets/images/ankarablockchain.png" alt=""> <img src="assets/images/ankarablockchain.png" alt=""> </li></a>
                 <a href="https://m1nxnightclub.com/"> <li>  <img src="assets/images/m1nx.jpeg" alt=""> <img src="assets/images/m1nx.jpeg" alt=""> </li></a>
+                <a href="https://www.twitter.com/ostimblockchain/"> <li>  <img src="assets/images/osbirteknik.jpg" alt=""> <img src="assets/images/osbirteknik.jpg" alt=""> </li></a>
              
               
             </ul>
