kripto Kurdu added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -992,7 +992,7 @@
             <!-- </div>
         </div> -->
         <!-- Event Sponsors End -->
-        <div class="our-clients">
+        <div id="Sponsors" class="our-clients">
             <br>
             <div class="meeta-section-title-2 text-center">
                 <h2 class="main-title">Event Sponsors</h2>
@@ -1000,6 +1000,7 @@
             <ul>
                 <a href="https://datsproject.io/"> <li>  <img src="assets/images/datsp.jpg" alt=""> <img src="assets/images/datsp.jpg" alt=""> </li></a>
                 <a href="https://lbank.com/"> <li>  <img src="assets/images/lbank.png" alt=""> <img src="assets/images/lbank.png" alt=""> </li></a>
+                <a href="https://www.youtube.com/@kriptokurdu"> <li>  <img src="assets/images/kriptoKurdu.jpg" alt=""> <img src="assets/images/kriptoKurdu.jpg" alt=""> </li></a>
               <!-- <li> <img src="assets/images/2.png" alt=""> <img src="assets/images/2-2.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="images/3-3.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="assets/images/3.png" alt=""> </li>
