--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -388,7 +388,7 @@
                             <!-- Single Counter Start -->
                             <div class="single-counter counter-item-2 text-center">
                                 <div class="counter-text">
-                                    <span class="counter">600</span>
+                                    <span class="counter">500</span>
                                     <p>Attendence</p>
                                 </div>
                             </div>
@@ -441,15 +441,15 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="#"><img src="assets/images/speaker/speaker-6.jpg" alt="Speaker"></a>
+                                            <a href="#"><img src="assets/images/speaker/serkan-bilen.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Founder of Adchain</p>
+                                        <h4 class="speaker-name"><a href="#">Serkan Bilen</a></h4>
+                                        <p class="speaker-designation">Founder of DATS Project </p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
@@ -1000,7 +1000,7 @@
             <ul>
                 <a href="https://datsproject.io/"> <li>  <img src="assets/images/datsp.jpg" alt=""> <img src="assets/images/datsp.jpg" alt=""> </li></a>
                 <a href="https://lbank.com/"> <li>  <img src="assets/images/lbank.png" alt=""> <img src="assets/images/lbank.png" alt=""> </li></a>
-                <a href="https://www.youtube.com/@kriptokurdu"> <li>  <img src="assets/images/kriptoKurdu.jpg" alt=""> <img src="assets/images/kriptoKurdu.jpg" alt=""> </li></a>
+                <a href="https://www.youtube.com/@kriptokurdu"> <li>  <img src="assets/images/kriptoKurdu.png" alt=""> <img src="assets/images/kriptoKurdu.png" alt=""> </li></a>
               <!-- <li> <img src="assets/images/2.png" alt=""> <img src="assets/images/2-2.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="images/3-3.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="assets/images/3.png" alt=""> </li>
