--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -441,7 +441,7 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="#"><img src="assets/images/speaker/serkan-bilen.jpg" alt="Speaker"></a>
+                                            <a href="https://twitter.com/s3rkanbil3n"><img src="assets/images/speaker/serkan-bilen.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
