oğuz evren photo added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -462,15 +462,16 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="#"><img src="assets/images/speaker/speaker-6.jpg" alt="Speaker"></a>
+                                            <a href="https://twitter.com/OguzEvrenKilic"><img src="assets/images/speaker/oguz-evren-kilic.jpg" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="#">Coming Soon</a></h4>
-                                        <p class="speaker-designation">Speaker</p>
+                                        <h4 class="speaker-name"><a href="#">Oğuz Evren Kılıç</a></h4>
+
+                                        <p class="speaker-designation">Chairman of the Blockchain and Crypto Asset Association</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
