new media partner added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1038,6 +1038,7 @@
                 <a href="https://kriptoarena.com/"> <li>  <img src="assets/images/KriptoArena.png" alt=""> <img src="assets/images/KriptoArena.png" alt=""> </li></a>
                 <a href="https://nfxhaber.com/"> <li>  <img src="assets/images/nfxHaber.png" alt=""> <img src="assets/images/nfxHaber.png" alt=""> </li></a>
                 <a href="https://kriptoks.com/"> <li>  <img src="assets/images/kriptoks.png" alt=""> <img src="assets/images/kriptoks.png" alt=""> </li></a>
+                <a href="https://etkinkampus.com/"> <li>  <img src="assets/images/etkinkampüs.png" alt=""> <img src="assets/images/etkinkampüs.png" alt=""> </li></a>
                 <a href="https://www.jciturkiye.org/"> <li>  <img src="assets/images/jci-b.jpeg" alt=""> <img src="assets/images/jci-b.jpeg" alt=""> </li></a>
             </ul>
           </div>
