--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1002,6 +1002,7 @@
                 <a href="https://datsproject.io/"> <li>  <img src="assets/images/datsp.jpg" alt=""> <img src="assets/images/datsp.jpg" alt=""> </li></a>
                 <a href="https://lbank.com/"> <li>  <img src="assets/images/lbank.png" alt=""> <img src="assets/images/lbank.png" alt=""> </li></a>
                 <a href="https://www.youtube.com/@kriptokurdu"> <li>  <img src="assets/images/kriptoKurdu.png" alt=""> <img src="assets/images/kriptoKurdu.png" alt=""> </li></a>
+                <a href="https://stabit.ae/"> <li>  <img src="assets/images/stabit.svg" alt=""> <img src="assets/images/stabit.svg" alt=""> </li></a>
               <!-- <li> <img src="assets/images/2.png" alt=""> <img src="assets/images/2-2.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="images/3-3.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="assets/images/3.png" alt=""> </li>
