--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1055,6 +1055,7 @@
                 <a href="https://www.twitter.com/ankarachain/"> <li>  <img src="assets/images/ankarablockchain.png" alt=""> <img src="assets/images/ankarablockchain.png" alt=""> </li></a>
                 <a href="https://m1nxnightclub.com/"> <li>  <img src="assets/images/m1nx.jpeg" alt=""> <img src="assets/images/m1nx.jpeg" alt=""> </li></a>
                 <a href="https://www.twitter.com/ostimblockchain/"> <li>  <img src="assets/images/osbirteknik.jpg" alt=""> <img src="assets/images/osbirteknik.jpg" alt=""> </li></a>
+                <a href="https://www.bkvd.org.tr/"> <li>  <img src="assets/images/blokzincirveKriptoVarlık.jpg" alt=""> <img src="assets/images/blokzincirveKriptoVarlık.jpg" alt=""> </li></a>
              
               
             </ul>
